// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch 镜像测试 不可用状态 1`] = `
<span
  className="sc-dlnjPT cLcamv sinoui-switch sinoui-switch--disabled"
  disabled={true}
>
  <span
    className="sc-gtssRu zotEN sinoui-switch__label"
    data-testid="switchLabel"
    disabled={true}
  >
    <input
      className="sinoui-switch__input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    className="sc-bdnylx gVpPlF sinoui-switch__track"
    disabled={true}
  />
</span>
`;

exports[`Switch 镜像测试 渲染Switch 1`] = `
<span
  className="sc-dlnjPT bHvzfb sinoui-switch"
>
  <span
    className="sc-gtssRu UYBvF sinoui-switch__label"
    color="primary"
    data-testid="switchLabel"
  >
    <input
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch1"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    className="sc-bdnylx gefWAM sinoui-switch__track"
    color="primary"
  />
</span>
`;

exports[`Switch 镜像测试 选中状态 1`] = `
<span
  className="sc-dlnjPT bHvzfb sinoui-switch sinoui-switch--checked"
>
  <span
    checked={true}
    className="sc-gtssRu gevsfQ sinoui-switch__label"
    color="info"
    data-testid="switchLabel"
  >
    <input
      checked={true}
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    checked={true}
    className="sc-bdnylx ftinAA sinoui-switch__track"
    color="info"
  />
</span>
`;
